Add more null annotations
Adds null annotations to most of the tests as well as a few other classes.
Also fixes a few other SAT findings.
Fixes ~300 SAT findings in total.

Signed-off-by: Wouter Born <github@maindrain.net>